[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/UI/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/slkscr.fnt" type="BitmapFont" id=2]

[sub_resource type="Theme" id=1]

default_font = ExtResource( 2 )

[node name="SettingsMenuControl" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="SettingsMenuPanel" type="PopupPanel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
popup/exclusive = false
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenuPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
scroll/horizontal = true
scroll/vertical = true
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenuPanel/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 360.0
custom_constants/separation = 10
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="ResolutionButton" type="OptionButton" parent="SettingsMenuPanel/ScrollContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 47.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]
__meta__ = {
"_edit_lock_": true
}

[node name="FullscreenButton" type="Button" parent="SettingsMenuPanel/ScrollContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 57.0
margin/right = 640.0
margin/bottom = 104.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsMenuPanel/ScrollContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 114.0
margin/right = 640.0
margin/bottom = 130.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 7.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="FxVolumeSlider" type="HSlider" parent="SettingsMenuPanel/ScrollContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 140.0
margin/right = 640.0
margin/bottom = 156.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="BgmVolumeSlider" type="HSlider" parent="SettingsMenuPanel/ScrollContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 166.0
margin/right = 640.0
margin/bottom = 182.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AmbientVolumeSlider" type="HSlider" parent="SettingsMenuPanel/ScrollContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 192.0
margin/right = 640.0
margin/bottom = 208.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 5.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2


